<resources>
    <string name="app_name">CWM</string>
    <string name="label_name">Camera Water Mark</string>
    <string name="label_version">version - %s</string>
    <string name="label_licence">Copyright © 2023 QingShu All Right Reserved.</string>
    <string name="apply">应用</string>
    <string name="add">添加</string>
    <string name="setting">设置</string>

    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_close">关闭</string>

    <string name="focal_distance">mm</string>
    <string name="aperture">F</string>
    <string name="shutter">S</string>
    <string name="iso">ISO</string>
    <string name="lens_param_hint">Exif参数</string>
    <string name="lens_param_tips">或者单独设置</string>
    <string name="lens_title">参数</string>

    <string name="art_signature_title">艺术字</string>
    <string name="art_signature_font">字体</string>

    <string name="template_title">模板 *</string>
    <string name="template_name">模板 %d</string>
    <string name="template_rename">命名</string>
    <string name="template_apply">应用</string>
    <string name="template_save">保存为模板</string>
    <string name="template_cancel">取消</string>

    <string name="logo_picker_title">Logo</string>
    <string name="symbol_picker_title">特殊符号</string>
    <string name="device_picker_title">相机品牌</string>

    <string name="menu_clear">移除所有图片</string>
    <string name="menu_remove">移除此图片</string>
    <string name="menu_exif">查看Exif</string>
    <string name="menu_save">保存此图</string>

    <string name="menu_modifier">修改</string>
    <string name="menu_delete">删除</string>

    <string name="device_title">设备信息</string>
    <string name="device_brand">品牌</string>
    <string name="device_model">型号</string>

    <string name="date_hint">日期</string>
    <string name="location_hint">位置/镜头</string>
    <string name="location_title">\u3000</string>

    <string name="card_size_small">小</string>
    <string name="card_size_super_small">超小</string>
    <string name="card_size_medium">中</string>
    <string name="card_size_large">大</string>

    <string name="card_color_auto">图片取色</string>
    <string name="card_color_blur">毛玻璃</string>
    <string name="card_color_white">白色</string>
    <string name="card_color_black">黑色</string>
    <string name="card_color_grey">灰色</string>
    <string name="card_color_gold">新年</string>
    <string name="card_color_custom_text">自定义文本</string>
    <string name="card_color_custom_bg">自定义背景</string>
    <string name="card_color_custom">自定义</string>

    <string name="choose_color_close">关闭</string>
    <string name="choose_color_save">保存</string>
    <string name="choose_color_def">默认</string>

    <string name="save_status">添加水印中</string>
    <string name="save_status_completed">已保存</string>
    <string name="save_status_error">没有图片</string>

    <string name="label_smartisan">锤子</string>
    <string name="label_canon">佳能</string>
    <string name="label_nikon">尼康</string>
    <string name="label_sony">索尼</string>
    <string name="label_fujifilm">富士</string>
    <string name="label_panasonic">松下</string>
    <string name="label_zeiss">蔡司</string>
    <string name="label_leica">徕卡</string>
    <string name="label_olympus">奥林巴斯</string>
    <string name="label_hasselblad">哈苏</string>
    <string name="label_sigma">适马</string>
    <string name="label_lumix">松下</string>
    <string name="label_apple">苹果</string>
    <string name="label_meizu">魅族</string>
    <string name="label_honor">荣耀</string>
    <string name="label_dji">大疆</string>
    <string name="label_insta360">Insta360</string>
    <string name="label_samsung">三星</string>
    <string name="label_sharp">夏普</string>
    <string name="label_ricoh">理光</string>
    <string name="logitech_gaming">LG</string>
    <string name="label_google">谷歌</string>
    <string name="label_master">GMaster</string>
    <string name="label_lenovo">联想</string>
    <string name="label_realme">真我</string>
    <string name="label_motorola">摩托罗拉</string>
    <string name="label_xiaomi">小米</string>
    <string name="label_huawei">华为</string>
    <string name="label_htc">HTC</string>
    <string name="label_vivo">VIVO</string>
    <string name="label_one_plus">一加</string>
    <string name="label_microsoft">微软</string>
    <string name="label_nokia">诺基亚</string>
    <string name="label_nubia">努比亚</string>
    <string name="label_oppo">OPPO</string>

    <string name="label_long_year">龙年</string>

    <string name="styles_default">默认</string>
    <string name="styles_card">卡片</string>
    <string name="styles_inner">内部</string>
    <string name="styles_new_year">新年</string>
    <string name="styles_space">留白</string>

    <string name="exif_dialog">Exif详细信息</string>
    <string name="exif_dialog_shutter">快门</string>
    <string name="exif_dialog_iso">ISO</string>
    <string name="exif_dialog_focal_length">焦距</string>
    <string name="exif_dialog_focal_length_canon">等效焦距(1.6,C)</string>
    <string name="exif_dialog_focal_length_other">等效焦距(1.5,C)</string>
    <string name="exif_dialog_focal_length_m43">等效焦距(2,M43)</string>
    <string name="exif_dialog_aperture">光圈</string>
    <string name="exif_dialog_date">拍摄时间</string>
    <string name="exif_dialog_lens_model">镜头型号</string>

    <string-array name="string_symbols">
        <item>AUTO</item>
        <item>ℤ</item>
        <item>Ⅰ</item>
        <item>Ⅱ</item>
        <item>Ⅲ</item>
        <item>Ⅳ</item>
        <item>Ⅴ</item>
        <item>Ⅵ</item>
        <item>Ⅶ</item>
        <item>Ⅷ</item>
        <item>Ⅸ</item>
        <item>Ⅹ</item>
        <item>Ⅺ</item>
        <item>Ⅻ</item>
        <item>α</item>
        <item>·</item>
    </string-array>

    <string-array name="string_devices">
        <item>AUTO</item>
        <item>Sony</item>
        <item>Nikon</item>
        <item>Canon</item>
        <item>Fujifilm</item>
        <item>Lumix</item>
    </string-array>

    <string name="screen_picture">图片</string>
    <string name="screen_style">样式</string>
    <string name="screen_icon">图标</string>
    <string name="screen_effect">效果</string>
    <string name="screen_color">颜色</string>
    <string name="screen_size">尺寸</string>
    <string name="screen_gravity">位置</string>
    <string name="screen_template">模板</string>

    <string name="screen_picture_picker">选择图片</string>
    <string name="screen_picture_exif">Exif</string>
    <string name="screen_picture_save">保存图片</string>

    <string name="screen_icon_gone">隐藏图标</string>
    <string name="screen_icon_logo">Logo</string>
    <string name="screen_icon_art_signature">艺术字</string>

    <string name="screen_gravity_none">无</string>
    <string name="screen_gravity_left">左</string>
    <string name="screen_gravity_right">右</string>
    <string name="screen_gravity_top">上</string>
    <string name="screen_gravity_bottom">下</string>

    <string name="screen_effect_none">无</string>
    <string name="screen_effect_shadow_picture">图片阴影</string>
    <string name="screen_effect_shadow_text">文本阴影</string>
    <string name="screen_effect_cornel">圆角</string>

    <string name="screen_exif_title">Exif</string>
    <string name="screen_exif_apply">应用</string>
    <string name="screen_exif_close">关闭</string>

    <string name="font_label_arkipelago">Arkipelago</string>
    <string name="font_label_quillbacks_demo">Quillbacks</string>
    <string name="font_label_modesty">Modesty</string>
    <string name="font_label_bernd">Bernd</string>
    <string name="font_label_autograf">Autograf</string>

    <string name="font_file_arkipelago">Arkipelago.otf</string>
    <string name="font_file_quillbacks_demo">QuillbacksDemo.ttf</string>
    <string name="font_file_modesty">Modesty.ttf</string>
    <string name="font_file_bernd">Bernd.otf</string>
    <string name="font_file_autograf">Autograf.ttf</string>

</resources>