<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_remove"
        android:title="@string/menu_remove"/>
    <item
        android:id="@+id/menu_exif"
        android:title="@string/menu_exif"/>
    <!--<item
        android:visible="false"
        android:id="@+id/menu_lens_param"
        android:title="@string/menu_lens_param"/>
    <item
        android:visible="false"
        android:id="@+id/menu_date_param"
        android:title="@string/menu_date_param"/>
    <item
        android:visible="false"
        android:id="@+id/menu_location_param"
        android:title="@string/menu_location_param"/>
    <item
        android:visible="false"
        android:id="@+id/menu_device_param"
        android:title="@string/menu_device_param"/>-->
    <item
        android:id="@+id/menu_clear"
        android:title="@string/menu_clear"/>
</menu>