<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="me.qingshu.cwm.MainViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingTop="8dp"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/right_top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lens_title"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/param_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:hint="@string/lens_param_hint"
                app:endIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/param"
                    android:text="@={viewmodel.lensParam}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="?dividerHorizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:text="@string/lens_param_tips"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="?dividerHorizontal" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/exif_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/focal_distance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/focal_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewmodel.lensFocalDistance}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/aperture">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aperture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:text="@={viewmodel.lensAperture}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/shutter">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/shutter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:text="@={viewmodel.lensShutter}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/iso">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/iso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="@={viewmodel.lensIso}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?dividerHorizontal" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/information_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_root"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:hint="@string/date_hint"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_information"
                    app:endIconMode="custom"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:text="@={viewmodel.infoDate}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/location_root"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:hint="@string/location_hint"
                    app:endIconCheckable="true"
                    app:endIconDrawable="@drawable/ic_information"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.infoLocation}"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:text="@string/device_title"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_brand"
                app:endIconCheckable="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_information"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:text="@={viewmodel.deviceBrand}"
                    android:id="@+id/brand_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconCheckable="true"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_information"
                android:hint="@string/device_model">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:text="@={viewmodel.deviceModel}"
                    android:id="@+id/model_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>