<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingTop="8dp"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/card_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/card_size"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/select_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@id/card_size_large"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/card_size_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/card_size_large"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/card_size_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/card_size_medium"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconEnabled="true" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:id="@+id/card_size_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/card_size_small"
                app:checkedIcon="@drawable/ic_check"
                app:checkedIconEnabled="true" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>