<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingTop="8dp"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingBottom="8dp">

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/device_title"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <ImageView
            android:id="@+id/info"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_information"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/symbol"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <ImageView
            android:id="@+id/symbol"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:src="@drawable/ic_information"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="24dp"
            android:layout_height="24dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/device_brand"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:id="@+id/brand_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="4dp"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/model"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/device_model">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:id="@+id/model_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>